# normal_grain_merge

./: .gitignore  LICENSE  README.md  main.py  makefile  py_ngm.py  pyproject.toml  requirements.txt  setup.py  speedtest.py
.github/workflows/: python-publish.yml
ngm/: __init__.py  normal_grain_merge.c
normal_grain_merge/: kernel_kind.py  normal_grain_merge.c  normal_grain_merge.pyi
tests/: test_ngm.py  test_speed.py
