[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "numpy<2.3.0"  # pin or loosen depending on your needs
]
build-backend = "setuptools.build_meta"

[project]
name = "ngm"
version = "0.0.1"
description = "Normal grain merge C extension"
authors = [
    { name = "Samuel Howard" }
]
dependencies = ["numpy<2.3.0"]
