[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "numpy<2.3.0"  # Follows opencv-python (cv2)
]
build-backend = "setuptools.build_meta"

[project]
name = "normal_grain_merge"
version = "0.1.1"
description = "Fused normal and grain merge C extension"
readme = "README.md"
authors = [
    { name = "Samuel Howard" }
]
dependencies = ["numpy<2.3.0"]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
]
keywords = [
    "image",
    "processing"
]
[project.urls]
"Homepage" = "https://github.com/samhaswon/normal_grain_merge"
"Bug Tracker" = "https://github.com/samhaswon/normal_grain_merge/issues"
